apps/copyparty/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: copyparty-svc
spec:
  selector:
    app: copyparty
  ports:
  - port: 80
    targetPort: http
    name: http
