apps/copyparty/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: copyparty-ingress
  labels:
    app.kubernetes.io/name: copyparty-ingress
spec:
  rules:
  - host: patch-me.example.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: copyparty-svc
            port: 
              name: http
